force-app/main/default/objects/Account/fields/AccountRecord_Type__c.field-meta.xml
<CustomField>
    <fullName>AccountRecord_Type__c</fullName>
    <label>AccountRecord Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>