force-app/main/default/objects/Account/fields/actionariat__c.field-meta.xml
<CustomField>
    <fullName>actionariat__c</fullName>
    <label>Actionariat</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>