force-app/main/default/objects/Account/fields/actionnaire_1_is_moral__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_1_is_moral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Est personne morale ?</label>
    <type>Checkbox</type>
</CustomField>