force-app/main/default/objects/Account/fields/actionnaire_1_nb_actions__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_1_nb_actions__c</fullName>
    <label>Nb action Actionnaire (1)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>