force-app/main/default/objects/Account/fields/actionnaire_1_nom__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_1_nom__c</fullName>
    <label>Nom Actionnaire (1)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>