force-app/main/default/objects/Account/fields/actionnaire_audacia_1_id_ssjacent__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_audacia_1_id_ssjacent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sous-jacent (1)</label>
    <referenceTo>Sous_Jacent__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>