force-app/main/default/objects/Account/fields/actionnaire_audacia_total_nb_actions__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_audacia_total_nb_actions__c</fullName>
    <formula>actionnaire_audacia_1_nb_actions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb action Audacia (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>