force-app/main/default/objects/Account/fields/actionnaire_audacia_total_tx_detention__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_audacia_total_tx_detention__c</fullName>
    <formula>actionnaire_audacia_1_tx_detention__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux total de détention Audacia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>