force-app/main/default/objects/Account/fields/actionnaire_autre_nb_actions__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_autre_nb_actions__c</fullName>
    <label>Nb action Autre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>