force-app/main/default/objects/Account/fields/actionnaire_autre_tx_detention__c.field-meta.xml
<CustomField>
    <fullName>actionnaire_autre_tx_detention__c</fullName>
    <formula>actionnaire_audacia_1_nb_actions__c * 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% de détention Autre (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>