force-app/main/default/objects/Account/fields/actionnaires_total_nb_actions__c.field-meta.xml
<CustomField>
    <fullName>actionnaires_total_nb_actions__c</fullName>
    <formula>actionnaire_1_nb_actions__c + actionnaire_autre_nb_actions__c + actionnaire_audacia_1_nb_actions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb action (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>