force-app/main/default/objects/Account/fields/Agent_placeur__c.field-meta.xml
<CustomField>
    <fullName>Agent_placeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent placeur</label>
    <type>Checkbox</type>
</CustomField>