force-app/main/default/objects/Account/fields/Ameliore_qualite_du_service_rendu__c.field-meta.xml
<CustomField>
    <fullName>Ameliore_qualite_du_service_rendu__c</fullName>
    <label>Améliore la qualité du service rendu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>