force-app/main/default/objects/Account/fields/AUM_Dette__c.field-meta.xml
<CustomField>
    <fullName>AUM_Dette__c</fullName>
    <label>AUM Dette</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>