force-app/main/default/objects/Account/fields/AUM_Equity__c.field-meta.xml
<CustomField>
    <fullName>AUM_Equity__c</fullName>
    <label>AUM Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>