force-app/main/default/objects/Account/fields/AUM_Immo__c.field-meta.xml
<CustomField>
    <fullName>AUM_Immo__c</fullName>
    <label>AUM Immo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>