force-app/main/default/objects/Account/fields/B_n_ficiaire_1__c.field-meta.xml
<CustomField>
    <fullName>B_n_ficiaire_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bénéficiaire 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personnes morales (Bénéficiaire 1)</relationshipLabel>
    <relationshipName>Investisseurs</relationshipName>
    <type>Lookup</type>
</CustomField>