force-app/main/default/objects/Account/fields/B_n_ficiaire_2__c.field-meta.xml
<CustomField>
    <fullName>B_n_ficiaire_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bénéficiaire 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personnes morales (Bénéficiaire 2)</relationshipLabel>
    <relationshipName>Investisseur</relationshipName>
    <type>Lookup</type>
</CustomField>