force-app/main/default/objects/Account/fields/B_n_ficiaire_3__c.field-meta.xml
<CustomField>
    <fullName>B_n_ficiaire_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bénéficiaire 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personnes morales (Bénéficiaire 3)</relationshipLabel>
    <relationshipName>Personnes_morales</relationshipName>
    <type>Lookup</type>
</CustomField>