force-app/main/default/objects/Account/fields/Campagne__c.field-meta.xml
<CustomField>
    <fullName>Campagne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagne</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Personnes morales</relationshipLabel>
    <relationshipName>Personnes_morales</relationshipName>
    <type>Lookup</type>
</CustomField>