force-app/main/default/objects/Account/fields/Code_Agence__c.field-meta.xml
<CustomField>
    <fullName>Code_Agence__c</fullName>
    <label>Code Agence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>