force-app/main/default/objects/Account/fields/Conforme_WEBHELP__c.field-meta.xml
<CustomField>
    <fullName>Conforme_WEBHELP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conforme WEBHELP</label>
    <type>Checkbox</type>
</CustomField>