force-app/main/default/objects/Account/fields/constellation__c.field-meta.xml
<CustomField>
    <fullName>constellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constellation</label>
    <type>Checkbox</type>
</CustomField>