force-app/main/default/objects/Account/fields/D_tention_indirecte_1__c.field-meta.xml
<CustomField>
    <fullName>D_tention_indirecte_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Détention indirecte</label>
    <type>Checkbox</type>
</CustomField>