force-app/main/default/objects/Account/fields/date_signature_autorisation_prelevement__c.field-meta.xml
<CustomField>
    <fullName>date_signature_autorisation_prelevement__c</fullName>
    <label>Date signature autorisation prélèvement</label>
    <type>Date</type>
</CustomField>