force-app/main/default/objects/Account/fields/Datecloture__c.field-meta.xml
<CustomField>
    <fullName>Datecloture__c</fullName>
    <label>Date de clôture exercice comptable</label>
    <type>Date</type>
</CustomField>