force-app/main/default/objects/Account/fields/dt_ent_creation__c.field-meta.xml
<CustomField>
    <fullName>dt_ent_creation__c</fullName>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>