force-app/main/default/objects/Account/fields/dt_ent_liquidation__c.field-meta.xml
<CustomField>
    <fullName>dt_ent_liquidation__c</fullName>
    <label>Date de liquidation</label>
    <type>Date</type>
</CustomField>