force-app/main/default/objects/Account/fields/dt_part_running_ttc__c.field-meta.xml
<CustomField>
    <fullName>dt_part_running_ttc__c</fullName>
    <label>Date d&apos;échéance</label>
    <type>Date</type>
</CustomField>