force-app/main/default/objects/Account/fields/Encours_sous_gestion_Instit__c.field-meta.xml
<CustomField>
    <fullName>Encours_sous_gestion_Instit__c</fullName>
    <formula>AUM_Dette__c +  AUM_Equity__c  +  AUM_Immo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encours sous gestion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>