force-app/main/default/objects/Account/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actif</fullName>
                <default>true</default>
                <label>Actif</label>
            </value>
            <value>
                <fullName>Redressement Judiciaire</fullName>
            </value>
            <value>
                <fullName>Sauvegarde</fullName>
            </value>
            <value>
                <fullName>Mandat ad hoc</fullName>
            </value>
            <value>
                <fullName>Liquidation Judiciaire</fullName>
            </value>
            <value>
                <fullName>Procédure collective en cours</fullName>
            </value>
            <value>
                <fullName>Cession pour 1€ symbolique</fullName>
                <isActive>false</isActive>
                <label>Cession pour 1€ symbolique</label>
            </value>
            <value>
                <fullName>Cédé</fullName>
                <isActive>false</isActive>
                <label>Cédé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>