force-app/main/default/objects/Account/fields/Habilitations_OK__c.field-meta.xml
<CustomField>
    <fullName>Habilitations_OK__c</fullName>
    <label>Habilitations OK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>