force-app/main/default/objects/Account/fields/IBAN_crypt2__c.field-meta.xml
<CustomField>
    <fullName>IBAN_crypt2__c</fullName>
    <formula>IF(LEN(txt_ent_iban__c )=33, LEFT(txt_ent_iban__c ,4)&amp;&apos; XXXX XXXX XXXX XXXX XXXX X&apos;&amp;RIGHT(txt_ent_iban__c ,2),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN crypté</label>
    <type>Text</type>
</CustomField>