force-app/main/default/objects/Account/fields/id_audacia__c.field-meta.xml
<CustomField>
    <fullName>id_audacia__c</fullName>
    <description>Auto-incrément Salesforce pour Audacia.
Démarrage à 10000</description>
    <displayFormat>CPT-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Identifiant Audacia</label>
    <type>AutoNumber</type>
</CustomField>