force-app/main/default/objects/Account/fields/id_bosar__c.field-meta.xml
<CustomField>
    <fullName>id_bosar__c</fullName>
    <formula>VALUE(RIGHT(id_bosar_txt__c,  LEN(id_bosar_txt__c)-4 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifiant BOSAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>