force-app/main/default/objects/Account/fields/id_bosar_txt__c.field-meta.xml
<CustomField>
    <fullName>id_bosar_txt__c</fullName>
    <externalId>true</externalId>
    <label>Identifiant BOSAR Txt</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>