force-app/main/default/objects/Account/fields/id_compte_apporteur__c.field-meta.xml
<CustomField>
    <fullName>id_compte_apporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte apporteur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes apportés</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>