force-app/main/default/objects/Account/fields/id_contact_apporteur__c.field-meta.xml
<CustomField>
    <fullName>id_contact_apporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact apporteur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes apportés</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>