force-app/main/default/objects/Account/fields/id_logo__c.field-meta.xml
<CustomField>
    <fullName>id_logo__c</fullName>
    <label>Logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>