force-app/main/default/objects/Account/fields/id_unifie__c.field-meta.xml
<CustomField>
    <fullName>id_unifie__c</fullName>
    <description>Unifie l&apos;identifiant Bosar s&apos;il existait avec l&apos;identifiant Audacia si pas d&apos;identifiant Bosar</description>
    <formula>value(IF(OR(ISNULL(id_bosar__c ),id_bosar__c &lt;1) , right(id_audacia__c,8) , text(id_bosar__c)))</formula>
    <label>Identifiant unifié</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>