force-app/main/default/objects/Account/fields/ID_unique_compte__c.field-meta.xml
<CustomField>
    <fullName>ID_unique_compte__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID unique personne morale</label>
    <type>Text</type>
</CustomField>