force-app/main/default/objects/Account/fields/Identifiant_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_Fiscal__c</fullName>
    <label>Identifiant Fiscal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>