force-app/main/default/objects/Account/fields/is_ent_auto_delete_sous__c.field-meta.xml
<CustomField>
    <fullName>is_ent_auto_delete_sous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppression automatique</label>
    <type>Checkbox</type>
</CustomField>