force-app/main/default/objects/Account/fields/is_ent_rsb__c.field-meta.xml
<CustomField>
    <fullName>is_ent_rsb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSB</label>
    <type>Checkbox</type>
</CustomField>