force-app/main/default/objects/Account/fields/is_group__c.field-meta.xml
<CustomField>
    <fullName>is_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groupe</label>
    <type>Checkbox</type>
</CustomField>