force-app/main/default/objects/Account/fields/L_encours_sous_gestion__c.field-meta.xml
<CustomField>
    <fullName>L_encours_sous_gestion__c</fullName>
    <label>L&apos;encours sous gestion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>