force-app/main/default/objects/Account/fields/lst_categorie__c.field-meta.xml
<CustomField>
    <fullName>lst_categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Avocat</fullName>
            </value>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Dépositaire/compte titres</fullName>
            </value>
            <value>
                <fullName>Conseil</fullName>
            </value>
            <value>
                <fullName>IRP</fullName>
            </value>
            <value>
                <fullName>Assureur</fullName>
            </value>
            <value>
                <fullName>Mutuelle</fullName>
            </value>
            <value>
                <fullName>Banque privée / Multigérant</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Société de Gestion</fullName>
            </value>
            <value>
                <fullName>Prévoyance</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Fonds de fonds</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>CGP</fullName>
            </value>
            <value>
                <fullName>Expert-comptable</fullName>
            </value>
            <value>
                <fullName>Multi Family Office</fullName>
            </value>
            <value>
                <fullName>Single Family Office</fullName>
            </value>
            <value>
                <fullName>Commissaire au compte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>