force-app/main/default/objects/Account/fields/lst_part_canal_dist__c.field-meta.xml
<CustomField>
    <fullName>lst_part_canal_dist__c</fullName>
    <label>Canaux de distribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réseau</fullName>
            </value>
            <value>
                <fullName>Plateforme</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>SGP</fullName>
            </value>
            <value>
                <fullName>Groupement</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>CGPI</fullName>
            </value>
            <value>
                <fullName>Grand cabinet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>