force-app/main/default/objects/Account/fields/lst_part_statut__c.field-meta.xml
<CustomField>
    <fullName>lst_part_statut__c</fullName>
    <label>Grille tarifaire du partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CIF Privilège</fullName>
            </value>
            <value>
                <fullName>CIF Plateforme</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>PSI Plateforme</fullName>
            </value>
            <value>
                <fullName>N.A.</fullName>
            </value>
            <value>
                <fullName>Amundi</fullName>
            </value>
            <value>
                <fullName>Direct - Audacia</fullName>
            </value>
            <value>
                <fullName>CIF - Option</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Institutionnel</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Réseau</fullName>
            </value>
            <value>
                <fullName>Plateforme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>