force-app/main/default/objects/Account/fields/lst_tableau_de_bord__c.field-meta.xml
<CustomField>
    <fullName>lst_tableau_de_bord__c</fullName>
    <label>Tableau de bord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>DPME</fullName>
                <default>true</default>
                <label>DPME</label>
            </value>
            <value>
                <fullName>Option ET DPME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>