force-app/main/default/objects/Account/fields/mtt_ent_capital_social__c.field-meta.xml
<CustomField>
    <fullName>mtt_ent_capital_social__c</fullName>
    <label>Capital Social</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>