force-app/main/default/objects/Account/fields/nb_ent_jours_suppression__c.field-meta.xml
<CustomField>
    <fullName>nb_ent_jours_suppression__c</fullName>
    <label>Délai avant suppression</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>