force-app/main/default/objects/Account/fields/nb_ent_titre_capital_social__c.field-meta.xml
<CustomField>
    <fullName>nb_ent_titre_capital_social__c</fullName>
    <label>Nb Titre capital social</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>