force-app/main/default/objects/Account/fields/nb_exercices__c.field-meta.xml
<CustomField>
    <fullName>nb_exercices__c</fullName>
    <inlineHelpText>Champ qui calcule le nombre d&apos;exercices liés</inlineHelpText>
    <label>Exercices</label>
    <summaryForeignKey>Exercice__c.id_account_entreprise__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>