force-app/main/default/objects/Account/fields/Nbre_participations_en_cours_d_inv__c.field-meta.xml
<CustomField>
    <fullName>Nbre_participations_en_cours_d_inv__c</fullName>
    <label>Nbre de participations en cours d&apos;invest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>