force-app/main/default/objects/Account/fields/Nombre_de_clients__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_clients__c</fullName>
    <label>Nombre de clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>