force-app/main/default/objects/Account/fields/non_assujetti_tva__c.field-meta.xml
<CustomField>
    <fullName>non_assujetti_tva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non assujetti à TVA</label>
    <type>Checkbox</type>
</CustomField>