force-app/main/default/objects/Account/fields/Num_ro_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_de_TVA__c</fullName>
    <label>Numéro de TVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>