force-app/main/default/objects/Account/fields/numero_de_mandat_de_prelevement__c.field-meta.xml
<CustomField>
    <fullName>numero_de_mandat_de_prelevement__c</fullName>
    <label>Numéro de mandat de prélèvement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>