force-app/main/default/objects/Account/fields/Obligations_Blanchiment_et_financement__c.field-meta.xml
<CustomField>
    <fullName>Obligations_Blanchiment_et_financement__c</fullName>
    <label>Obligations Blanchiment et financement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>