force-app/main/default/objects/Account/fields/Piste__c.field-meta.xml
<CustomField>
    <fullName>Piste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Piste</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Personnes morales</relationshipLabel>
    <relationshipName>Personnes_morales</relationshipName>
    <type>Lookup</type>
</CustomField>