force-app/main/default/objects/Account/fields/Raison_sociale_2__c.field-meta.xml
<CustomField>
    <fullName>Raison_sociale_2__c</fullName>
    <label>Raison sociale 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>