force-app/main/default/objects/Account/fields/Raison_sociale_4__c.field-meta.xml
<CustomField>
    <fullName>Raison_sociale_4__c</fullName>
    <label>Raison sociale 4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>